projects/maison/src/apps/mealie/mealie.httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mealie-websecure
  namespace: mealie
spec:
  parentRefs:
    - name: default
      namespace: default
  hostnames:
    - mealie.chezmoi.sh
  rules:
    - backendRefs:
        - name: mealie
          port: 80
