projects/maison/src/apps/mealie/mealie.vpn.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/exclude-adguard: "true"
  name: mealie-tailscale
  namespace: mealie
spec:
  defaultBackend:
    service:
      name: mealie
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - mealie
